syntax = "proto3";

package v1;

import "google/api/annotations.proto";

option go_package = "github.com/shelojara/collection-api/proto/gen/v1;genv1";

service Items {
  rpc GetItem(GetItemRequest) returns (Item) {
    option (google.api.http) = {
      post: "/v1.Items/GetItem"
      body: "*"
    };
  }

  rpc ImportGame(ImportGameRequest) returns (ImportGameResponse) {
    option (google.api.http) = {
      post: "/v1.Items/ImportGame"
      body: "*"
    };
  }

  rpc SearchItems(SearchItemsRequest) returns (SearchItemsResponse) {
    option (google.api.http) = {
      post: "/v1.Items/SearchItems"
      body: "*"
    };
  }
}

message Item {
  enum Kind {
    KIND_UNSPECIFIED = 0;
    KIND_GAME = 1;
  }

  string id = 1;
  Kind kind = 2;

  string external_source = 3;
  string external_id = 4;
  string external_url = 5;

  string title = 6;
  double igdb_rating = 7;
  double total_rating = 8;
  string description = 9;
  string cover_url = 10;
}

message GetItemRequest {
  string id = 1;
}

message ImportGameRequest {
  string title = 1;
}

message ImportGameResponse {
  string id = 1;
}

message SearchItemsRequest {
  Item.Kind kind = 1;
  string query = 2;
}

message SearchItemsResponse {
  repeated Item items = 1;
}
